Fixed overflow bug

--- a/frontend/styles/HomePageLayout.module.scss
+++ b/frontend/styles/HomePageLayout.module.scss
@@ -13,5 +13,5 @@
   flex: 1; 
   background-color: #ffffff; 
   padding: 20px;
-  overflow: hidden;
+  overflow-x: hidden;
 }
